--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env-cmd -f ./config/dev.env nodemon app.js"
+    "dev": "env-cmd -f ./root/dev.env nodemon app.js"
   },
   "keywords": [],
   "author": "",
